--- a/src/app/pages/solicitudes-facturas/solicitudes-facturas.component.html
+++ b/src/app/pages/solicitudes-facturas/solicitudes-facturas.component.html
@@ -2,7 +2,7 @@
   <div class="col-sm-12">
     <div class="card shadow-sm border-0">
       <div class="card-header pb-2 d-flex justify-content-between align-items-center">
-        <h5 class="mb-0">Vendedores</h5>
+        <h5 class="mb-0">Solicitudes facturas</h5>
         <a routerLink="/usuarios/nuevo" class="btn btn-sm btn-primary">
           <i class="ti ti-plus me-1"></i> Agregar usuario
         </a>
@@ -48,7 +48,6 @@
                 <th>#</th>
                 <th>Odoo</th>
                 <th>Venta</th>
-                <th>Venta</th>
                 <th>Cliente</th>
                 <th>Comentarios</th>
                 <th>Total</th>
@@ -60,13 +59,14 @@
             <tbody>
               <tr *ngFor="let u of facturas; let i = index">
                 <td>{{ u.id_odoo }}</td>
+                <td>{{ u.id_solicitud }}</td>
                 <td>{{ u.venta }}</td>
                 <td>{{ u.nombre_cliente }}</td>
                 <td>{{ u.comentarios }}</td>
                 <td>{{ u.total || '-' }}</td>
                 <td>{{ u.fecha_facturada }}</td>
                 <td>{{ u.activa }}</td>
-                                <td class="text-center">
+                <td class="text-center">
                   <a class="btn btn-link-primary"
                      title="Editar"
                      [routerLink]="['/usuarios/editar', u.id_solicitud]">
