--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -70,7 +70,7 @@
                 <td>{{ u.id_usuario }}</td>
                 <td>{{ u.nombre_usuario }}</td>
                 <td>{{ u.telefono_celular }}</td>
-                <td>{{ u.ubicacion_almacen || '-' }}</td>
+                <td>{{ u.nombre_ubicacion || '-' }}</td>
                 <td>{{ u.diario || '-' }}</td>
                 <td>{{ u.cliente || '-' }}</td>
                 <td class="text-center">
