--- a/src/app/pages/usuarios/usuario-form/usuario-form.component.scss
+++ b/src/app/pages/usuarios/usuario-form/usuario-form.component.scss
@@ -1,3 +1,5 @@
 .bg-grisesillo {
-  background-color: #d6d8da !important;
+  background-color: #E7E7E7 !important;
+    border-radius: 0.5rem; // Opcional, para que se vea más suave
+  padding: 0 0.5em;      
 }
