Pantalla de facturas
-Se cambio la pantalla de la tabla de facturas para agregar correctamente el estado de la factura
- Se agrego la pantalla para actualizar una factura
- Se agrego un api la cual solo muestra el comentario y el estado de la factura que se desea ver

--- a/src/app/pages/lista-rutas/listarutas.component.html
+++ b/src/app/pages/lista-rutas/listarutas.component.html
@@ -55,15 +55,15 @@
             </thead>
             <tbody>
               <tr *ngFor="let u of rutas; let i = index">
-                <td>{{ u.usuario }}</td>
-                <td>{{ u.nombre }}</td>
+                <td>{{ u.id_ruta }}</td>
+                <td>{{ u.nombre_usuario }}</td>
                 <td>{{ u.fecha_inicio }}</td>
                 <td>{{ u.fecha_fin }}</td>
                 <td>{{ u.estado_actual || '-' }}</td>
                                 <td class="text-center">
                   <a class="btn btn-link-primary"
                      title="Editar"
-                     [routerLink]="['lista-rutas/editar', u.id_ruta]">
+                     [routerLink]="['/lista-rutas/editar/', u.id_ruta]">
                     <i class="ti ti-pencil"></i>
                   </a>
                 </td>
