--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -76,7 +76,7 @@
                 <td class="text-center">
                   <a class="btn btn-link-primary"
                      title="Editar"
-                     [routerLink]="['/usuarios/editar', u.id_usuario]">
+                     [routerLink]="['/usuarios/editar/', u.id_usuario]">
                     <i class="ti ti-pencil"></i>
                   </a>
                   <button class="btn btn-link-danger"
