--- a/src/app/pages/lista-rutas/lista-rutas-form/lista-rutas-form.component.html
+++ b/src/app/pages/lista-rutas/lista-rutas-form/lista-rutas-form.component.html
@@ -1,1 +1,22 @@
-<p>lista-rutas-form works!</p>
+<div class="row mt-2">
+    <div class="col-sm-12">
+        <div class="card shadow-sm border-0">
+
+            <!-- Header -->
+             <div class="card-header pb-2 d-flex justify-content-between align-items-center">
+                 <h5 class="mb-0">{{ esEdicion ? 'Ver ruta' : 'Crear ruta' }}</h5>
+                 <!-- No olvides agregar la funcion que guarda la ruta -->
+                 <button class="btn btn-primary" > <i class="ti ti-device-floppy me-2"></i>{{ esEdicion ? 'Actualizar' : 'Crear' }}</button>
+             </div>
+
+            <!-- Loader Overlay -->
+            <div *ngIf="cargando" class="loader-overlay">
+              <img src="assets/images/loading.gif" alt="Cargando..." class="loader-img" />
+            </div>
+
+             <!-- Body -->
+              <div class="card-body pt-3">
+              </div>
+        </div>
+    </div>
+</div>
