--- a/src/app/pages/solicitudes-facturas/solicitudes-facturas.component.html
+++ b/src/app/pages/solicitudes-facturas/solicitudes-facturas.component.html
@@ -3,9 +3,9 @@
     <div class="card shadow-sm border-0">
       <div class="card-header pb-2 d-flex justify-content-between align-items-center">
         <h5 class="mb-0">Solicitudes facturas</h5>
-        <a routerLink="/usuarios/nuevo" class="btn btn-sm btn-primary">
+        <!-- <a routerLink="/solicitudes-facturas/nuevo" class="btn btn-sm btn-primary">
           <i class="ti ti-plus me-1"></i> Agregar usuario
-        </a>
+        </a> -->
       </div>
 
       <div class="card-body pt-2">
@@ -58,18 +58,18 @@
             </thead>
             <tbody>
               <tr *ngFor="let u of facturas; let i = index">
-                <td>{{ u.id_odoo }}</td>
                 <td>{{ u.id_solicitud }}</td>
+                <td>{{ u.id_odoo }}</td>
                 <td>{{ u.venta }}</td>
                 <td>{{ u.nombre_cliente }}</td>
                 <td>{{ u.comentarios }}</td>
                 <td>{{ u.total || '-' }}</td>
                 <td>{{ u.fecha_facturada }}</td>
-                <td>{{ u.activa }}</td>
+                <td>{{ u.facturada ? 'Sí' : 'No' }}</td>
                 <td class="text-center">
                   <a class="btn btn-link-primary"
                      title="Editar"
-                     [routerLink]="['/usuarios/editar', u.id_solicitud]">
+                     [routerLink]="['/solicitudes-facturas/editar/', u.id_solicitud]">
                     <i class="ti ti-pencil"></i>
                   </a>
                   <button class="btn btn-link-danger"
